--- a/User/Core.csproj
+++ b/User/Core.csproj
@@ -71,9 +71,11 @@
     <Compile Include="Character\Character.cs" />
     <Compile Include="Character\CharacterEnums.cs" />
     <Compile Include="Character\CharacterFactory.cs" />
+    <Compile Include="Character\Inventory.cs" />
     <Compile Include="Character\Equipment.cs" />
     <Compile Include="Character\IAttribute.cs" />
     <Compile Include="Commands\Items.cs" />
+    <Compile Include="Commands\MessageParser.cs" />
     <Compile Include="Commands\Skill.cs" />
     <Compile Include="Items\Beverage.cs" />
     <Compile Include="Items\Clothing.cs" />
