--- a/User/Core.csproj
+++ b/User/Core.csproj
@@ -68,6 +68,7 @@
     <Compile Include="Calendar\Calendar.cs" />
     <Compile Include="Character\Actor.cs" />
     <Compile Include="Character\Attribute.cs" />
+    <Compile Include="Character\Bonuses.cs" />
     <Compile Include="Character\Character.cs" />
     <Compile Include="Character\CharacterEnums.cs" />
     <Compile Include="Character\CharacterFactory.cs" />
@@ -92,6 +93,7 @@
     <Compile Include="Items\Iweapon.cs" />
     <Compile Include="Items\Key.cs" />
     <Compile Include="Items\Weapons.cs" />
+    <Compile Include="MessageHandling\Message.cs" />
     <Compile Include="NPC\Inpc.cs" />
     <Compile Include="NPC\MessageParser.cs" />
     <Compile Include="NPC\QuestHandler.cs" />
