--- a/Scripts/Scripts.csproj
+++ b/Scripts/Scripts.csproj
@@ -48,9 +48,11 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="CreateCharacter.cs" />
+    <Compile Include="IScript.cs" />
     <Compile Include="LevelUp.cs" />
     <Compile Include="Login.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="ScriptBase.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\MongoWrapper\MongoWrapper.csproj">
