--- a/User/packages.config
+++ b/User/packages.config
@@ -1,6 +1,12 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="Common.Logging" version="2.1.2" targetFramework="net45" />
   <package id="mongocsharpdriver" version="1.9.2" targetFramework="net45" />
   <package id="NUnit" version="2.6.3" targetFramework="net45" />
+  <package id="Roslyn.Compilers.Common" version="1.2.20906.2" targetFramework="net45" />
+  <package id="Roslyn.Compilers.CSharp" version="1.2.20906.2" targetFramework="net45" />
+  <package id="ScriptCs.Contracts" version="0.14.1" targetFramework="net45" />
+  <package id="ScriptCs.Core" version="0.14.1" targetFramework="net45" />
+  <package id="ScriptCs.Engine.Roslyn" version="0.14.1" targetFramework="net45" />
   <package id="VikingErik.LuaInterface" version="1.0.4213.34901" targetFramework="net45" />
 </packages>
