Added more functionality to the Groups class and started adding commands to the CommandParser class for it.

--- a/User/Core.csproj
+++ b/User/Core.csproj
@@ -94,6 +94,7 @@
     <Compile Include="Character\Inventory.cs" />
     <Compile Include="Character\Equipment.cs" />
     <Compile Include="Character\IAttribute.cs" />
+    <Compile Include="Commands\Groups.cs" />
     <Compile Include="Commands\Items.cs" />
     <Compile Include="Commands\MessageParser.cs" />
     <Compile Include="Commands\Skill.cs" />
