--- a/WorldBuilder/packages.config
+++ b/WorldBuilder/packages.config
@@ -1,4 +1,16 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="Autofac" version="3.3.1" targetFramework="net45" />
+  <package id="Autofac.Mef" version="3.0.3" targetFramework="net45" />
+  <package id="Common.Logging" version="2.1.2" targetFramework="net45" />
+  <package id="Microsoft.Web.Xdt" version="2.1.1" targetFramework="net45" />
   <package id="mongocsharpdriver" version="1.9.2" targetFramework="net45" />
+  <package id="Newtonsoft.Json" version="6.0.3" targetFramework="net45" />
+  <package id="NuGet.Core" version="2.8.6" targetFramework="net45" />
+  <package id="Roslyn.Compilers.Common" version="1.2.20906.2" targetFramework="net45" />
+  <package id="Roslyn.Compilers.CSharp" version="1.2.20906.2" targetFramework="net45" />
+  <package id="ScriptCs.Contracts" version="0.15.0" targetFramework="net45" />
+  <package id="ScriptCs.Core" version="0.15.0" targetFramework="net45" />
+  <package id="ScriptCs.Engine.Roslyn" version="0.15.0" targetFramework="net45" />
+  <package id="ScriptCs.Hosting" version="0.15.0" targetFramework="net45" />
 </packages>
